# AdventOfCode2023

./: .gitignore  README.md  pyproject.toml  ruff.toml
src/: day1A.py  day1B.py  test.py
tests/: day1_test.py  test_test.py
