[project]
name = "AdventOfCode2023"
version = "0"
description = ""
authors = [
    {name = "Prometheos2", email = "45640841+Prometheos2@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
]
lint = [
    "ruff>=0.1.6",
]
